# scroom

./: .autotools  .clang-format  .clang-tidy  .cmake-format.yaml  .cproject  .gitignore  .gitlab-ci.yml  .project  .travis.yml  AUTHORS  CMakeGraphVizOptions.cmake  CMakeLists.txt  COPYING  ChangeLog  Dockerfile.in  Makefile  Makefile.am  NEWS  README  Scroom.srctrlprj  cmake-config.h.in  configure.ac  configure.in  doxyfile.in  index.html  master-dir.mk  master.mk  out.txt  package  package-helper.in  regenerate-dockerfiles  supported-ubuntu-releases  test-dockerfiles
gui/: CMakeLists.txt  ENVIRONMENT  ENVIRONMENT.cmd.in  ENVIRONMENT.in  Makefile.am  configure.in  scroom.glade  scroomBeast.glade  scroomTest.xml
gui/icon/: icon.rc
gui/ruler/: CMakeLists.txt
gui/ruler/inc/: ruler.hh  rulerstrategies.hh
gui/ruler/src/: ruler.cc  ruler.hh  rulerstrategies.cc  rulerstrategies.hh
gui/ruler/test/: main.cc  ruler-tests.cc
gui/scroom/: ENVIRONMENT  Makefile.am  configure.in  scroom.glade  scroom.glade.bak  scroom.gladep.bak
gui/scroom/src/: Makefile.am  callbacks.c  callbacks.cc  callbacks.h  callbacks.hh  interface.c  interface.h  loader.cc  loader.hh  main.c  main.cc  pluginmanager.cc  pluginmanager.hh  sidebarmanager.cc  view.cc  view.hh
gui/src/: CMakeLists.txt  Makefile.am  callbacks.cc  callbacks.hh  gtkruler.c  gtkruler.h  loader.cc  loader.hh  main.cc  pluginmanager.cc  pluginmanager.hh  progressbarmanager.cc  progressbarmanager.hh  ruler.cc  ruler.hh  rulerstrategies.cc  rulerstrategies.hh  sidebarmanager.cc  sidebarmanager.hh  view.cc  view.hh  workinterface.hh
gui/test/: main.cc  ruler-tests.cc
inc/: CMakeLists.txt  Makefile.am  colormappable.hh  global.hh  memorymanagedinterface.hh  memorymanagerinterface.hh  observable.hh  plugininformationinterface.h  plugininformationinterface.hh  plugininterface.h  plugininterface.hh  presentationinterface.hh  scroom-semaphore.hh  scroominterface.hh  scroomplugin.h  scroomplugin.hh  threadpool.hh  tile.hh  tiledbitmapinterface.hh  unused.h  viewinterface.hh  workinterface.hh
inc/scroom/: CMakeLists.txt  assertions.hh  async-deleter.hh  bitmap-helpers.hh  blockallocator.hh  bookkeeping.hh  cairo-helpers.hh  color.hh  colormappable.hh  compiler.hh  dont-delete.hh  format_stuff.hh  function-additor.hh  global.hh  gtk-helpers.hh  gtk-test-helpers.hh  imagemdinterface.hh  interface.hh  layeroperations.hh  linearsegment.hh  memoryblobs.hh  memorymanagedinterface.hh  memorymanagerinterface.hh  observable.hh  opentiledbitmapinterface.hh  pipettelayeroperations.hh  pipetteviewinterface.hh  plugininformationinterface.hh  point.hh  presentationinterface.hh  progressinterface.hh  progressinterfacehelpers.hh  progressinterfacemultiplexer.hh  rectangle.hh  registration.hh  resizablepresentationinterface.hh  roi.hh  rounding.hh  scroominterface.hh  scroomplugin.hh  (+14 more)
inc/scroom/gmock/: colormappable.hh  presentationinterface.hh
inc/scroom/impl/: bookkeepingimpl.hh  threadpoolimpl.hh
libs/: CMakeLists.txt  Makefile  Makefile.am
libs/boost-test-helper/: CMakeLists.txt  Makefile.am
libs/boost-test-helper/src/: CMakeLists.txt  Makefile.am  unittest-main.cc
libs/boost-test-helper/test/: CMakeLists.txt  Makefile.am  main.cc  testlib-tests.cc  tests
libs/compat-tests/: Makefile.am  README.txt
libs/compat-tests/boost-future-test/: Makefile.am  README.txt  main.cc
libs/memory-manager/: CMakeLists.txt  Makefile.am  config.mk  filebackedmemory.cc  memorymanager.cc
libs/memory-manager/src/: CMakeLists.txt  Makefile.am  blob-compression.cc  blob-compression.hh  filebackedmemory.cc  memoryblobs.cc  memorymanager.cc  swapbasedblockallocator.cc
libs/memory-manager/test/: CMakeLists.txt  Makefile.am  blob-tests.cc  compression-tests.cc  main.cc  pageprovider-tests.cc  swap-block-allocator-tests.cc
libs/plugin-interfaces/: CMakeLists.txt
libs/sanity-tests/: CMakeLists.txt  Makefile.am  README.txt  basic-assumptions.cc  boost-bind.cc  boost-packaged-tasks.cc  boost-smart-pointers.cc  main.cc
libs/scroom/: CMakeLists.txt
libs/scroom/src/: CMakeLists.txt  bitmap-helpers.cc  cairo-helpers.cc  colormap-helpers.cc  presentationinterface.cc  roi-parser.cc  roi-parser.hh  roi.cc  showmetadata.cc  transformpresentation.cc  tweak-view.cc
libs/scroom/test/: CMakeLists.txt  colormaphelpers_test.cc  main.cc  parse_locations_test.cc  transformpresentation_test.cc
libs/threadpool/: CMakeLists.txt  Makefile.am  config.mk  sequentially.cc  sequentially.hh  threadpool.cc  threadpoolimpl.cc  threadpoolimpl.hh
libs/threadpool/src/: CMakeLists.txt  Makefile.am  async-deleter.cc  function-additor.cc  queue.cc  queue.hh  threadpool.cc  threadpoolimpl.cc
libs/threadpool/test/: CMakeLists.txt  Makefile.am  async-deleter-tests.cc  boost-smart-pointers.cc  boost-tests.cc  function-additor-tests.cc  function-additor.cc  function-additor.hh  helpers.cc  helpers.hh  main.cc  semaphore-tests.cc  threadpool-destruction-tests.cc  (+4 more)
libs/tile-manager/: config.mk
libs/tiled-bitmap/: CMakeLists.txt  Makefile  Makefile.am  config.mk  layer.cc  layer.hh  layercoordinator.cc  layercoordinator.hh  local.hh  tiled-bitmap.cc  tiled-bitmap.hh  tileinternal.cc  tileinternal.hh
libs/util/: CMakeLists.txt  Makefile.am
plugins/: CMakeLists.txt  Makefile  Makefile.am
plugins/colormap/: CMakeLists.txt  Makefile.am  colormapplugin.cc  colormapplugin.hh  colormapprovider.cc  colormapprovider.hh  colormaps.cc  colormaps.hh  config.mk  main.cc
plugins/example/: CMakeLists.txt  Makefile.am  config.mk  example.cc  example.hh  examplepresentation.cc  examplepresentation.hh  main.cc
plugins/measure/: CMakeLists.txt
plugins/metadata/: CMakeLists.txt  main.cc  metadata.cc  metadata.hh
plugins/pipette/: CMakeLists.txt  pipette.cc  pipette.hh
plugins/tiff/: CMakeLists.txt  Makefile.am  config.mk  layeroperations.cc  layeroperations.hh  main.cc  tiff.cc  tiff.hh  tiffpresentation.cc  tiffpresentation.hh
plugins/transparent-overlay/: CMakeLists.txt  transparentoverlay.cc  transparentoverlay.hh  transparentoverlaypresentation.cc  transparentoverlaypresentation.hh
(+19133 files in other folders)
